mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/JIRA_Field_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores field mapping for JIRA integration.  Mapping is from source field name to target field name.</description>
    <label>JIRA Field Mapping</label>
</CustomObject>