mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that a field mapping should be enabled</description>
    <inlineHelpText>Used to indicate that a field mapping should be enabled</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>