mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/fields/Is_Relational__c.field-meta.xml
<CustomField>
    <fullName>Is_Relational__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate that a field mapping is for a relational field in JIRA</description>
    <inlineHelpText>Used to indicate that a field mapping is for a relational field in JIRA</inlineHelpText>
    <label>Is Relational</label>
    <type>Checkbox</type>
</CustomField>