mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <inlineHelpText>The name of the property in JIRA if the Target Field Type is "object"</inlineHelpText>
    <label>Property Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>