mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <inlineHelpText>The API name for the source SObject Type</inlineHelpText>
    <label>Source Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>