mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <inlineHelpText>Stores the API name of the field in the target.</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>