mywork/force-app/main/default/objects/JIRA_Field_Mapping__c/fields/Target_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Type__c</fullName>
    <inlineHelpText>The type of field in the target. Types supported are "string", "object", and "array" Blank types will be treated as strings.</inlineHelpText>
    <label>Target Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>